// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmitAppReadDocModal should match snapshot with minimal props 1`] = `
<Modal
  footerItems={
    <React.Fragment>
      <Button
        type="button"
        variant="primary"
      >
        YES, CONTINUE
      </Button>
      <Button
        type="button"
        variant="primary"
      >
        NO, VIEW DOCS
      </Button>
    </React.Fragment>
  }
  tapOutsideToDissmiss={[MockFunction]}
  title="Important"
  visible={true}
>
  Before continuing with registering your app, we strongly advise that you read the "Step-by-step" guide on how best to complete the following form. Please confirm if have read the documentation?
</Modal>
`;

exports[`SubmitAppReadDocModal should match snapshot with some additional props 1`] = `
<Modal
  footerItems={
    <React.Fragment>
      <Button
        onClick={[MockFunction]}
        type="button"
        variant="primary"
      >
        YES, CONTINUE
      </Button>
      <Button
        onClick={[MockFunction]}
        type="button"
        variant="primary"
      >
        NO, VIEW DOCS
      </Button>
    </React.Fragment>
  }
  tapOutsideToDissmiss={true}
  title="title"
  visible={true}
>
  Before continuing with registering your app, we strongly advise that you read the "Step-by-step" guide on how best to complete the following form. Please confirm if have read the documentation?
</Modal>
`;
